--- a/tutor/student/templates/student_details.html
+++ b/tutor/student/templates/student_details.html
@@ -359,10 +359,28 @@
           </div>
         </div>
           <div style="height: 26px"></div>
+          <form action="send_mail" method="POST">
+            {% csrf_token %}
+            <label for="uname"><b>Email</b></label>
+    <input type="text" placeholder="Enter email" name="email" required>
+
+
+    <label for="psw"><b>message</b></label>
+    <input type="text" placeholder="Enter message" name="mes" required>
+    <input type="submit" style="background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;">
+
+          </form>
       </div>
     </div>
   </div>
 </div>
+
 <!-- partial -->
            
     		</div>
