--- a/tutor/student/templates/tutor.html
+++ b/tutor/student/templates/tutor.html
@@ -94,13 +94,10 @@ input[type=submit]:hover {
   </div>
   <div class="row">
     <div class="col-25">
-      <label for="country">Gender</label>
+      <label for="country">Mail</label>
     </div>
     <div class="col-75">
-      <select id="country" name="gender">
-        <option value="Male">Male</option>
-        <option value="Female">Female</option>
-      </select>
+        <input type="text" id="lname" name="gender" placeholder="Mail...">
     </div>
   </div>
   <div class="row">
